# python-games

./: .coverage  .env.example  .gitignore  .replit  DEPLOYMENT_CHECKLIST.md  GAME_PROGRESSION.md  LOCAL_SETUP.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  REPLIT_OPTIMIZATIONS.md  REPLIT_SETUP.md  SUMMARY.md  TESTING.md  admin_utils.py  app.py  cleanup_port.sh  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  start.sh
docs/: ADMIN.md  AVATAR_SYSTEM.md  LEADERBOARD.md  MISSION_UX_IMPROVEMENTS.md  QUICKSTART.md  README.md  SYNTAX_ERROR_BANNER.md
docs/guides/: TESTING.md
docs/reference/: PROJECT_COMPLETE.md  SUMMARY.md
docs/setup/: DEPLOYMENT_CHECKLIST.md  LOCAL_SETUP.md  QUICKSTART.md  REPLIT_OPTIMIZATIONS.md  REPLIT_SETUP.md
scripts/: admin_utils.py  cleanup_port.sh  port_utils.py  run_tests.sh  start.sh  stop_app.sh  update_tetris_db.py
static/css/: style.css
static/js/: game_engine.js
templates/: admin.html  game.html  index.html
tests/: conftest.py  debug_tetris.py  test_admin.py  test_api.py  test_app_startup.py  test_models.py  test_port_cleanup.py
