[project]
name = "python-games"
version = "1.0.0"
description = "Python Game Builder - A learning environment for kids"
authors = [{name = "Your Name"}]
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-CORS==4.0.0",
    "python-dotenv==1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
